[NI] Allow unsafe memory access
Kotlin compiler uses `sun.misc.Unsafe::invokeCleaner` method, which has
been terminally deprecated. Native image reports this as a warning in
the runtime. However, this access in `FastJarFileSystemKt` is accounted
for and intentional. Therefore, we can allow native image the unsafe
memory access to suppress the warning

^KT-89319 Fixed