@@ -161,6 +161,7 @@ val kotlincNativeImageTask = tasks.register<Exec>("kotlincNativeImage") {
         "-H:+UnlockExperimentalVMOptions",
         "-H:+AllowJRTFileSystem",
         "--enable-native-access=ALL-UNNAMED",
+        "--sun-misc-unsafe-memory-access=allow",
         "--add-opens", "java.base/java.lang=ALL-UNNAMED",
         "--add-opens", "java.base/java.io=ALL-UNNAMED",
         "--add-opens", "java.base/java.nio=ALL-UNNAMED",
